--- a/preview.html
+++ b/preview.html
@@ -1,6 +1,8 @@
 <html>
     <head>
         <link type="text/css" rel="stylesheet" href="style.css" />
+        <script src="https://unpkg.com/codeflask/build/codeflask.min.js"></script>
+        <script src="libs/prism.js"></script>
         <script src="https://unpkg.com/js-yaml@3.12.0/dist/js-yaml.min.js"></script>
         <script src="https://unpkg.com/jquery@3.3.1/dist/jquery.min.js"></script>
         <script src="ha-card-plyfill.js" type="module"></script>
@@ -12,32 +14,28 @@
                 <ha-card>
                     <div class="card-header">Config</div>
                     <div class="card-content">
-                        <textarea style="width: 100%; height: 300px;" id="cardConfig">
-type: "battery-state-card"
+                        <div id="configEditor" style="position: relative; min-height: 300px;">type: "battery-state-card"
 title: "Battery levels"
 entities:
   - entity: sensor.zonk
     name: "My awesome entity"
     value_override: 20
   - entity: sensor.another
-    name: "Another entity"
-                        </textarea>
+    name: "Another entity"</div>
                     </div>
                 </ha-card>
                 <ha-card>
                     <div class="card-header">Home assistant state</div>
                     <div class="card-content">
-                        <textarea style="width: 100%; height: 300px;" id="haState">
-[
-  {
-    entity: "sensor.zonk",
-    state: 20,
-    attributes: {
-        battery_level: 2
+                        <div id="haStateEditor" style="position: relative; min-height: 300px;">{
+  "sensor.zonk": {
+    "entity": "sensor.zonk",
+    "state": 20,
+    "attributes": {
+      "battery_level": 22
     }
   }
-]
-                        </textarea>
+}</div>
                     </div>
                 </ha-card>
             </div>
