--- a/preview.html
+++ b/preview.html
@@ -6,6 +6,7 @@
         <script src="https://unpkg.com/js-yaml@3.12.0/dist/js-yaml.min.js"></script>
         <script src="https://unpkg.com/jquery@3.3.1/dist/jquery.min.js"></script>
         <script src="ha-card-plyfill.js" type="module"></script>
+        <script src="storage.js"></script>
         <script src="card-controller.js"></script>
     </head>
     <body>
@@ -14,43 +15,19 @@
                 <ha-card>
                     <div class="card-header">Config</div>
                     <div class="card-content">
-                        <div id="configEditor" style="position: relative; min-height: 300px;">type: "battery-state-card"
-title: Filtersr
-sort_by_level: "asc"
-bulk_rename:
-  - from: "Battery Level" # simple string replace (note: "to" is not required if you want to remove string)
-    to: "sensor"
-  - from: "/\\s(temperature|temp)\\s/" # regular expression
-    to: " temp. "
-entities:
-    # entities requiring additional properties can be added explicitly
-  - entity: sensor.temp_outside_battery_numeric
-    multiplier: 10
-    name: "Outside temp. sensor"
-filter:
-  include: # filters for auto-adding
-    - name: entity_id # entities which id ends with "_battery_level"
-      value: "*_battery_level"
-    - name: attributes.device_class # and entities which device_class attribute equals "battery"
-      value: "battery"
-    - name: attributes.battery_level</div>
+                        <div id="configEditor" style="position: relative; min-height: 300px;"></div>
                     </div>
                 </ha-card>
                 <ha-card>
                     <div class="card-header">Home assistant state</div>
                     <div class="card-content">
-                        <div id="haStateEditor" style="position: relative; min-height: 300px;">{
-  "climate.dachboden": {
-    "entity": "climate.dachboden",
-    "state": "off",
-    "attributes": {
-      "temperature": 0,
-      "battery_level": 22,
-      "device_class": "battery",
-      "friendly_name": "Dachboden"
-    }
-  }
-}</div>
+                        <div id="haStateEditor" style="position: relative; min-height: 300px;"></div>
+                    </div>
+                </ha-card>
+                <ha-card>
+                    <div class="card-header">Share</div>
+                    <div class="card-content" style="display: flex">
+                        <button id="save">Get url</button> <input type="text" placeholder="Generated url" id="savedLink" style="flex: 1; margin-left: 10px" />
                     </div>
                 </ha-card>
             </div>
