Generating saved url and updating current url

--- a/preview.html
+++ b/preview.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <title>Lovelace card tester</title>
         <link type="text/css" rel="stylesheet" href="style.css" />
         <script src="https://unpkg.com/codeflask/build/codeflask.min.js"></script>
         <script src="libs/prism.js"></script>
