--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <div class="contentWrapper">
-            <div>
+            <div style="flex: 1">
                 <ha-card>
                     <div class="card-header">Config</div>
                     <div class="card-content">
