--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
     <head>
         <title>Lovelace card tester</title>
         <link type="text/css" rel="stylesheet" href="style.css" />
-        <script src="https://unpkg.com/codeflask/build/codeflask.min.js"></script>
+        <script src="libs/codeflask.min.js"></script>
         <script src="libs/prism.js"></script>
-        <script src="https://unpkg.com/js-yaml@3.12.0/dist/js-yaml.min.js"></script>
-        <script src="https://unpkg.com/jquery@3.3.1/dist/jquery.min.js"></script>
+        <script src="libs/js-yaml.min.js"></script>
+        <script src="libs/jquery.min.js"></script>
         <script src="ha-card-plyfill.js" type="module"></script>
         <script src="storage.js"></script>
         <script src="card-controller.js"></script>
