Migration to rollup

--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
         <script src="libs/prism.js"></script>
         <script src="libs/js-yaml.min.js"></script>
         <script src="libs/jquery.min.js"></script>
-        <script src="ha-card-plyfill.js" type="module"></script>
-        <script src="storage.js"></script>
-        <script src="card-controller.js"></script>
+        <script src="index.js"></script>
     </head>
     <body>
         <div class="contentWrapper">
